# SnakeGame2

./: .gitignore  README.md  compileSnakeGame  compileSnakeGame.sh  install_allegro  install_allegro.sh  第16組_proposal.odt
Test/: Test.c
allegro_mac/lib/: liballegro_acodec.so.5.2.7  liballegro_audio.so.5.2.7  liballegro_color.so.5.2.7  liballegro_dialog.so.5.2.7  liballegro_font.so.5.2.7  liballegro_image.so.5.2.7  liballegro_main.so.5.2.7  liballegro_memfile.so.5.2.7  liballegro_primitives.so.5.2.7  liballegro_ttf.so.5.2.7  liballegro_video.so.5.2.7
allegro_mac/lib/pkgconfig/: allegro-5.pc  allegro_acodec-5.pc  allegro_audio-5.pc  allegro_color-5.pc  allegro_dialog-5.pc  allegro_font-5.pc  allegro_image-5.pc  allegro_main-5.pc  allegro_memfile-5.pc  allegro_primitives-5.pc  allegro_ttf-5.pc  allegro_video-5.pc
data/image/圖片編輯/: apple.xcf  background.xcf  buttom.xcf  dark_corner.xcf  end.xcf  ground.xcf  moon.xcf  noise.xcf  snakeBody_straight.xcf  snakeBody_turn.xcf  snakeHead.xcf  snakeTail.xcf  spike.xcf  spike_down.xcf  stone.xcf  地板一面.xcf  地板二面.xcf  地板四面.xcf  地板無面.xcf  背景中.xcf  蛇尾死.xcf  蛇身彎死.xcf  蛇身直死.xcf  蛇頭死.xcf  輪鋸.xcf
data/image/圖片編輯/menu/: game_menu.xcf  game_menu_exit.xcf  game_menu_guide.xcf  game_menu_level.xcf  level_in.xcf  (+13 more)
data/level/: L1  L2  L3  L4  Level1  Level2  Level3  Level4  Level5  Level6
include/: Body.h  Button.h  Engine.h  Game.h  GameWindow.h  Interface.h  Level.h  Map.h  Menu.h  Object.h  ObjectQueue.h  Position.h  Snake.h  SoundEngine.h  Stone.h  Tqueue.h  global.h
include/Entity/: Apple.h  Box.h  Button.h  Edge.h  End.h  Entity.h  EntityArray.h  EntityList.h  EntityMap.h  Ground.h  Object.h  Snake.h  Spike.h  Stone.h
include/Interface/: Interface.h  Level.h  LevelView.h
include/Interface/Menu/: GuideMenu.h  InMenu.h  LevelMenu.h  LevelStart.h  LevelWin.h  Menu.h  MultiMenu.h  MusicMenu.h  SingleMenu.h  StartMenu.h
include/Object/: Apple.h  Body.h  BodyObject.h  Object.h  ObjectVector.h  SimpleObject.h
include/Utility/: Direction.h  LevelRead.h  Position.h  ShiftWindow.h
src/: Body.c  Button.c  CMakeLists.txt  Engine.c  Game.c  GameWindow.c  Interface.c  Level.c  LevelDataBuild.py  LevelDataBuild1.py  Main.c  Map.c  Menu.c  Object.c  ObjectOueue.c  Snake.c  SoundEngine.c  Stone.c  global.c  position.c  test.c
src/Entity/: Apple.c  Box.c  Button.c  Edge.c  End.c  Entity.c  EntityArray.c  EntityList.c  EntityMap.c  Ground.c  Object.c  Snake.c  Spike.c  Stone.c
src/Interface/: Interface.c  Level.c  LevelView.c
src/Interface/Menu/: GuideMenu.c  InMenu.c  LevelMenu.c  LevelStart.c  LevelWin.c  Menu.c  MultiMenu.c  MusicMenu.c  SingleMenu.c  StartMenu.c
src/Object/: Apple.c  BodyObject.c  Object.c  ObjectVector.c  SimpleObject.c
src/Utility/: Direction.c  LevelRead.c  Position.c  ShiftWindow.c
